[gd_scene load_steps=31 format=3 uid="uid://p6cxv60yqme1"]

[ext_resource type="Script" path="res://assets/scripts/tower.gd" id="1_6qgrj"]
[ext_resource type="Texture2D" uid="uid://v23kj584c61u" path="res://assets/gfx/tower_bottom.png" id="1_bm6ry"]
[ext_resource type="Texture2D" uid="uid://cy7jk5weu54om" path="res://assets/gfx/tower_top.png" id="2_gj4t0"]
[ext_resource type="Texture2D" uid="uid://dlbjephxroepu" path="res://assets/gfx/ui/under.png" id="3_2o7vj"]
[ext_resource type="Texture2D" uid="uid://uj7k1crk402x" path="res://assets/gfx/ui/over.png" id="4_ejeyt"]
[ext_resource type="Theme" uid="uid://b2c6rdemdtmx3" path="res://main.tres" id="5_65anl"]
[ext_resource type="Texture2D" uid="uid://ywsxmey5goha" path="res://assets/gfx/ui/radial_under.png" id="5_yb80v"]
[ext_resource type="Texture2D" uid="uid://ch38up0bysljt" path="res://assets/gfx/ui/radial_over.png" id="6_e4hss"]
[ext_resource type="Texture2D" uid="uid://dp135d736y46l" path="res://assets/gfx/gun.png" id="8_n54lo"]
[ext_resource type="Texture2D" uid="uid://skbdywt48vlw" path="res://assets/gfx/smoke_particle.png" id="10_3k6gb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_amxfy"]
atlas = ExtResource("8_n54lo")
region = Rect2(0, 0, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_fecs3"]
atlas = ExtResource("8_n54lo")
region = Rect2(0, 7, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r5hh"]
atlas = ExtResource("8_n54lo")
region = Rect2(26, 7, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj3vn"]
atlas = ExtResource("8_n54lo")
region = Rect2(52, 7, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjaty"]
atlas = ExtResource("8_n54lo")
region = Rect2(78, 7, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1cq7"]
atlas = ExtResource("8_n54lo")
region = Rect2(104, 7, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcwxy"]
atlas = ExtResource("8_n54lo")
region = Rect2(130, 7, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_evnsq"]
atlas = ExtResource("8_n54lo")
region = Rect2(156, 7, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_njgnf"]
atlas = ExtResource("8_n54lo")
region = Rect2(182, 7, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8qj3"]
atlas = ExtResource("8_n54lo")
region = Rect2(208, 7, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fwoe"]
atlas = ExtResource("8_n54lo")
region = Rect2(234, 7, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv0k8"]
atlas = ExtResource("8_n54lo")
region = Rect2(260, 7, 26, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_vepbr"]
atlas = ExtResource("8_n54lo")
region = Rect2(286, 7, 26, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_edp3e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_amxfy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fecs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r5hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj3vn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjaty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1cq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcwxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evnsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njgnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8qj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fwoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv0k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vepbr")
}],
"loop": false,
"name": &"reload",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbm15"]
size = Vector2(54, 116)

[sub_resource type="CircleShape2D" id="CircleShape2D_slg2d"]
radius = 113.018

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l138i"]
size = Vector2(64, 126)

[sub_resource type="Curve" id="Curve_0xgps"]
_data = [Vector2(0, 1), 0.0, 1.67174, 0, 0, Vector2(1, 0), -3.70619, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ghvfd"]
offsets = PackedFloat32Array(0, 0.326667)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_g2sfq"]
radius = 93.0

[node name="Tower" type="StaticBody2D"]
script = ExtResource("1_6qgrj")

[node name="TowerSprite" type="Sprite2D" parent="."]
position = Vector2(0, 31)
texture = ExtResource("1_bm6ry")

[node name="Weapon" type="Node2D" parent="."]

[node name="GunSprite" type="AnimatedSprite2D" parent="Weapon"]
position = Vector2(31, 0)
sprite_frames = SubResource("SpriteFrames_edp3e")
animation = &"reload"
autoplay = "idle"

[node name="Barrel" type="Marker2D" parent="Weapon"]
position = Vector2(44, 0)

[node name="ShootRaycast" type="RayCast2D" parent="Weapon"]
target_position = Vector2(900, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="TowerTop" type="Sprite2D" parent="."]
texture = ExtResource("2_gj4t0")

[node name="TowerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 31)
shape = SubResource("RectangleShape2D_dbm15")

[node name="TowerInitCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 31)
shape = SubResource("CircleShape2D_slg2d")

[node name="HitBox" type="Area2D" parent="."]
visible = false
position = Vector2(0, 31)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_l138i")

[node name="HpBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -38.0
offset_top = -23.0
offset_right = -34.0
offset_bottom = 86.0
step = 0.1
value = 65.0
fill_mode = 3
texture_under = ExtResource("3_2o7vj")
texture_progress = ExtResource("4_ejeyt")

[node name="TimeSkipUi" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
theme = ExtResource("5_65anl")

[node name="Label" type="Label" parent="TimeSkipUi"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -128.0
offset_right = 88.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 2
text = "[SKIP TIME]
Press LMB"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeSkipBar" type="TextureProgressBar" parent="TimeSkipUi"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -73.0
offset_right = 102.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
step = 0.01
fill_mode = 4
texture_under = ExtResource("5_yb80v")
texture_progress = ExtResource("6_e4hss")

[node name="ShootParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
lifetime = 1.2
one_shot = true
explosiveness = 0.92
lifetime_randomness = 0.5
texture = ExtResource("10_3k6gb")
emission_shape = 4
emission_points = PackedVector2Array(-10.32, 14.77, 25.265, 0, 8.85, 0)
emission_colors = PackedColorArray()
spread = 60.0
gravity = Vector2(0, -12)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
scale_amount_min = 0.2
scale_amount_max = 0.6
scale_amount_curve = SubResource("Curve_0xgps")
color = Color(0.843137, 0.843137, 0.843137, 1)
color_ramp = SubResource("Gradient_ghvfd")

[node name="TimeSkipArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="TimeSkipArea"]
position = Vector2(0, 31)
shape = SubResource("CircleShape2D_g2sfq")

[connection signal="animation_finished" from="Weapon/GunSprite" to="." method="_on_gun_sprite_animation_finished"]
[connection signal="area_entered" from="TimeSkipArea" to="." method="_on_time_skip_area_area_entered"]
[connection signal="area_exited" from="TimeSkipArea" to="." method="_on_time_skip_area_area_exited"]
